# openv

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  check_scores.py  inference.py  inference_engine.py  main.py  openenv.yaml  output.txt  pyproject.toml  requirements.txt  results.txt  scores.txt  validate.sh
graders/: __init__.py  code_grader.py  email_grader.py  meeting_grader.py
openenv_logic/: __init__.py  environment.py
scratch/: test_tasks.py
server/: app.py
static/: app.js  index.html  style.css
tasks/: __init__.py  code_review.py  email_triage.py  meeting_scheduler.py
